<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView style="@style/DialogText.HelpHeading"
            android:text="@string/help_section1_title"/>
        <TextView style="@style/DialogText"
            android:text="@string/help_section1_summary"/>
        <TextView style="@style/DialogText.HelpHeading"
            android:text="@string/help_section2_title"/>
        <TextView style="@style/DialogText"
            android:text="@string/help_section2_summary"/>
    </LinearLayout>
</ScrollView>