<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.heuberg.myconvert.EditActivity"
    android:orientation="vertical"
    >

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_edit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_buttons"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_delete"
            android:text="@string/btn_delete"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_rename"
            android:text="@string/btn_rename"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_save"
            android:text="@string/btn_save"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/text_xmlcontent"
        android:background="@drawable/border_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:padding="5dp"
        android:layout_margin="5dp"
        />

</LinearLayout>